--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
       "**/__tests__/**/*.test.js"
     ],
     "setupFilesAfterEnv": [
-      "@testing-library/jest-dom/extend-expect"
+      "@testing-library/jest-dom/extend-expect",
+      "jest-localstorage-mock"
     ],
     "moduleNameMapper": {
       "ˆ~/(.*)": "<rootDir>/src/$1"
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "jest-localstorage-mock": "^2.4.2",
     "react-app-rewired": "^2.1.6"
   }
 }
