--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "axios-mock-adapter": "^1.18.1",
     "jest-localstorage-mock": "^2.4.2",
     "react-app-rewired": "^2.1.6"
   }
